# spartahack26

./: .gitignore  README.md  main.py  server.py  shell.nix  test_app_launcher.py  test_finger_count.py  test_mouse_backend.py  test_mouse_move.py  test_mouse_movement.py  test_mouse_sleep.py  test_sleep.py  test_swipe_gestures.py
agents/: summarizer_agent.py
backend/: main.py  planner.py  schemas.py  stt.py  test_complete_flow.py  test_detection.py  vision.py
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/mock-server/: .gitignore  package.json  server.js  test-client.js
client/src/: App.css  App.tsx  index.css  router.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
current/tracking/: hands.py
data/: master_knowledge.md
deprecated/Server/: App.py
deprecated/forcegraph/: CHANGELOG.md  (+2 more)
eye_tracking/: l2cs_tracker.py  main.py  nose_tracker.py  test_mouse.py  test_mouse_delay.py  test_mouse_direct.py  test_mouse_move.py
forcegraph/: CHANGELOG.md  README.md  package-lock.json  package.json
python_script/: canvas_client.py  chat_agent.py  config.py  lecture_downloader.py  main.py  scheduler.py  state_store.py  sync_canvas.py
scripts/: seed_chroma.py
voice_nav/: ELEVENLABS_README.md  README.md  ai_client.py  element_selector.py  element_selector_cli.py  example_elevenlabs.py  main.py  minimal_overlay.py  mouse.py  mouse_enums.py  planner.py  pyproject.toml  schemas.py  stt.py  stt_elevenlabs.py  test_ai_client.py  test_element_detection.py  test_elevenlabs_stt.py  test_voice_nav.py  typing_control.py
(+38 files in other folders)
