[project]
name = "voice-nav"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Pillow",
    "opencv-python",
    "pynput",
    "numpy",
    "requests",
    "sounddevice",
    "soundfile",
    "pydantic>=2.12.5",
]

# System dependencies that need to be installed via package manager:
# - python-pycairo
# - python-pygobject
# - python-evdev (optional, for advanced mouse input)
# - python-dbus (optional, for Wayland support)
# - opencv (for computer vision element detection)
